--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <img src="assets/1.png" alt="Ngọc Rồng Clan" />
             <span class="tag hot">SERVER 1</span>
           </div>
-          <h3 class="card__title">Ngọc Rồng Clan</h3>
+          <h3 class="card__title">Server 1 (Clan)</h3>
           <div class="card__meta">GAME HOT</div>
         </a>
 
@@ -105,7 +105,7 @@
             <img src="assets/2.png" alt="Ngọc Rồng 3Q" />
             <span class="tag hot">SERVER 2</span>
           </div>
-          <h3 class="card__title">Ngọc Rồng 3Q</h3>
+          <h3 class="card__title">Server 2 (3Q)</h3>
           <div class="card__meta">GAME HOT</div>
         </a>
 
@@ -114,7 +114,7 @@
             <img src="assets/3.png" alt="Ngọc Rồng Mun" />
             <span class="tag hot">SERVER 3</span>
           </div>
-          <h3 class="card__title">Ngọc Rồng Mun</h3>
+          <h3 class="card__title">Server 3 (Mun)</h3>
           <div class="card__meta">GAME HOT</div>
         </a>
 
@@ -123,7 +123,7 @@
             <img src="assets/4.png" alt="Ngọc Rồng Ping" />
             <span class="tag hot">SERVER 4</span>
           </div>
-          <h3 class="card__title">Ngọc Rồng Ping</h3>
+          <h3 class="card__title">Server 4 (Ping)</h3>
           <div class="card__meta">GAME HOT</div>
         </a>
 
@@ -132,7 +132,7 @@
             <img src="assets/5.png" alt="Ngọc Rồng Kid" />
             <span class="tag hot">SERVER 5</span>
           </div>
-          <h3 class="card__title">Ngọc Rồng Kid</h3>
+          <h3 class="card__title">Server 5 (Kid)</h3>
           <div class="card__meta">GAME HOT</div>
         </a>
       </div>
@@ -141,7 +141,7 @@
     <section class="section section-news">
       <div class="section__head">
         <h2>TIN TỨC</h2>
-        <a class="see-all" href="#" id="seeAllPosts">Xem tất cả <span class="arrow">›</span></a>
+        <a class="see-all" href="#" id="xemtatca">Xem tất cả <span class="arrow">›</span></a>
       </div>
 
       <div id="posts" class="posts"></div>
