--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <a class="card" href="https://nroclan.com" target="_blank">
           <div class="card__thumb">
             <img src="assets/1.png" alt="Ngọc Rồng Clan" />
-            <span class="tag hot">SERVER 1</span>
+            <span class="tag hot">HOT</span>
           </div>
           <h3 class="card__title">Server 1 (Clan)</h3>
           <div class="card__meta">GAME HOT</div>
@@ -103,7 +103,7 @@
         <a class="card" href="https://nro3q.com" target="_blank">
           <div class="card__thumb">
             <img src="assets/2.png" alt="Ngọc Rồng 3Q" />
-            <span class="tag hot">SERVER 2</span>
+            <span class="tag hot">HOT</span>
           </div>
           <h3 class="card__title">Server 2 (3Q)</h3>
           <div class="card__meta">GAME HOT</div>
@@ -112,7 +112,7 @@
         <a class="card" href="https://nromun.com" target="_blank">
           <div class="card__thumb">
             <img src="assets/3.png" alt="Ngọc Rồng Mun" />
-            <span class="tag hot">SERVER 3</span>
+            <span class="tag hot">HOT</span>
           </div>
           <h3 class="card__title">Server 3 (Mun)</h3>
           <div class="card__meta">GAME HOT</div>
@@ -121,7 +121,7 @@
         <a class="card" href="https://nrogping.com" target="_blank">
           <div class="card__thumb">
             <img src="assets/4.png" alt="Ngọc Rồng Ping" />
-            <span class="tag hot">SERVER 4</span>
+            <span class="tag hot">HOT</span>
           </div>
           <h3 class="card__title">Server 4 (Ping)</h3>
           <div class="card__meta">GAME HOT</div>
@@ -130,7 +130,7 @@
         <a class="card" href="https://nrokid.com" target="_blank">
           <div class="card__thumb">
             <img src="assets/5.png" alt="Ngọc Rồng Kid" />
-            <span class="tag hot">SERVER 5</span>
+            <span class="tag hot">HOT</span>
           </div>
           <h3 class="card__title">Server 5 (Kid)</h3>
           <div class="card__meta">GAME HOT</div>
