--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </a>
 
         <!-- Privacy -->
-        <a class="quick" href="https://thanhdi.top/privacy.html">
+        <a class="quick" href="privacy.html">
           <svg class="quick__icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8"
             stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
             <path d="M12 2l7 3v6c0 5-3.5 9.5-7 11-3.5-1.5-7-6-7-11V5l7-3z"></path>
