--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Contact & Support – Thanh Di's Gaming Studio</title>
-    <meta property="og:image"
-        content="https://nroclan.com/static/sonic/img/contactimg.png?v=1">
-    <meta property="og:image:secure_url"
-        content="https://nroclan.com/static/sonic/img/contactimg.png?v=1">
+    <title>TDStudio - Contact & Support</title>
+    <meta property="og:image" content="https://nroclan.com/static/sonic/img/contactimg.png?v=1">
+    <meta property="og:image:secure_url" content="https://nroclan.com/static/sonic/img/contactimg.png?v=1">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:type" content="image/png">
@@ -350,10 +348,10 @@
 
         <footer>
             <div class="foot-row">
-                <div class="brand" id="brandName">Thanh Di's Gaming Studio</div>
+                <div class="brand" id="brandName">TDStudio</div>
                 <p>Thường trả lời sau vài giờ. Vui lòng chọn kênh hỗ trợ thuận tiện nhất!</p>
             </div>
-            <small id="footCopy">© <span id="year"></span> Thanh Di's Gaming Studio — All rights reserved.</small>
+            <small id="footCopy">© <span id="year"></span> TDStudio — All rights reserved.</small>
         </footer>
     </main>
 
