--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>TDStudio – Trang chủ chính thức</title>
+  <title>TDStudio – Home Page</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/css/ph.css">
   <meta property="og:image" content="https://nroclan.com/static/sonic/img/ok.png?v=112">
@@ -16,7 +16,7 @@
 
 <body>
   <header class="appbar">
-    <a class="brand" href="#" aria-label="TDStudio Home">
+    <a class="brand" href="./" aria-label="TDStudio Home">
       <img src="assets/logo.png" alt="TDStudio" />
     </a>
     <a class="login-btn" href="./">Login</a>
