--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <section class="section">
       <div class="section__head">
         <h2 id="gamedexuat">GAME ĐỀ XUẤT</h2>
-        <a class="see-all" href="https://thanhdi.top/games" target="_blank" id="xemtatca">Xem tất cả <span
+        <a class="see-all" href="#" id="xemtatca">Xem tất cả <span
             class="arrow">›</span></a>
       </div>
 
