--- a/privacy-choices.html
+++ b/privacy-choices.html
@@ -1,109 +1,175 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>User Privacy Choices – TDStudio Game</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/css/ph.css">
   <meta name="color-scheme" content="light dark" />
   <link rel="icon" type="image/x-icon" href="static/sonic/img/favicon_1.png">
-  <style>
-    body{font-family:system-ui,sans-serif;background:#0b1020;color:#e7ecff;margin:0;padding:0}
-    main{max-width:900px;margin:auto;padding:48px 20px}
-    h1{font-size:32px;margin-bottom:16px}
-    p{margin:12px 0}
-    .card{background:rgba(255,255,255,.06);border:1px solid rgba(255,255,255,.15);border-radius:12px;padding:20px;margin:16px 0}
-    a{color:#8aa0ff;text-decoration:none}
-    footer{margin-top:48px;border-top:1px dashed rgba(255,255,255,.15);padding:16px 0;color:#b5c0ffcc}
-  </style>
+  <meta property="og:image" content="https://nroclan.com/static/sonic/img/ok.png?v=112">
+  <meta property="og:image:secure_url" content="https://nroclan.com/static/sonic/img/ok.png?v=112">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:type" content="image/png">
 </head>
-<body>
-  <main role="main">
-    <h1 data-i18n="heading">User Privacy Choices</h1>
-    <p data-i18n-html="intro_text">
-      You can request <b>account deletion</b> or <b>personal data removal</b> related to the TDStudio Game app.
-    </p>
 
-    <div class="card">
-      <h2 data-i18n="method_title">How to submit a request</h2>
-      <p data-i18n-html="method_text">
-        Please contact us via email:
-        <a href="mailto:contact@thanhdi.top">contact@thanhdi.top</a><br>
-        Or use the support form:
-        <a href="https://thanhdi.top/contact.html">thanhdi.top/contact.html</a>
+<!-- Reuse the privacy scope to get the same styling without changing CSS -->
+
+<body data-page="privacy">
+  <!-- Appbar -->
+  <header class="appbar">
+    <a class="brand" href="./" aria-label="TDStudio Home">
+      <img src="assets/logo.png" alt="TDStudio" />
+    </a>
+    <a class="login-btn" href="./">Login</a>
+  </header>
+
+  <main class="page policy">
+    <!-- Hero (banner giữ nguyên phong cách của privacy) -->
+    <section class="hero hero--policy">
+      <div class="hero__media">
+        <img src="assets/banner.png?v=12" alt="TDStudio – User Privacy Choices" />
+      </div>
+      <div class="hero__text">
+        <h1 class="hero__title">
+          <i class="ph ph-user-gear" aria-hidden="true"></i>
+          User Privacy Choices
+        </h1>
+        <p class="hero__meta">
+          Updated: <span id="choicesDate"></span> — Options for data & account control.
+        </p>
+      </div>
+    </section>
+
+    <!-- Nội dung (cards giống privacy) -->
+    <section class="section">
+      <!-- Intro / Summary -->
+      <div class="card">
+        <span class="tag">Summary</span>
+        <p>
+          You can request <b>account deletion</b> and <b>personal data removal</b> for the TDStudio Game.
+          We verify requests to protect your account, and we aim to complete processing within
+          <b>30 days</b>.
+        </p>
+      </div>
+
+      <!-- How to submit -->
+      <div class="card">
+        <h2>How to Submit a Request</h2>
+        <ul class="list">
+          <li>
+            <b>Email:</b> send your request to
+            <a href="mailto:contact@thanhdi.top">contact@thanhdi.top</a>
+            (use the subject “Privacy Request”).
+          </li>
+          <li>
+            <b>Support Form:</b>
+            <a href="https://thanhdi.top/contact.html" rel="noopener">thanhdi.top/contact.html</a>
+            (choose the <i>Privacy</i> topic).
+          </li>
+          <li>
+            <b>Include:</b> your username and a brief description (e.g., “delete account” or “remove gameplay data”).
+          </li>
+        </ul>
+
+        <h2>What Happens Next</h2>
+        <ul class="list">
+          <li>We will acknowledge your request and may ask for additional verification.</li>
+          <li>Local data is removed when you uninstall the app.</li>
+          <li>Server-side data is deleted after we complete verification and confirm the action with you.</li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Footer (giữ nguyên phong cách privacy) -->
+    <footer class="footer">
+      <img src="assets/logo.png" alt="TDStudio" class="footer-logo">
+      <p class="footer-contact">
+        Contact:
+        <a href="https://www.facebook.com/ngocrongnthevmax" target="_blank" rel="noopener">Fanpage</a> ·
+        Email: <a href="mailto:contact@thanhdi.top">contact@thanhdi.top</a>
       </p>
-      <p data-i18n="sla_text">We will process your request within 30 days.</p>
-    </div>
-
-    <!-- Show a compact English-only block when lang=en -->
-    <div class="card" data-show-if-lang="en">
-      <h2 data-i18n="short_title">English (short)</h2>
-      <p data-i18n-html="short_text">
-        Request <b>account deletion</b> or <b>data removal</b> → Email
-        <a href="mailto:contact@thanhdi.top">contact@thanhdi.top</a> or use
-        <a href="https://thanhdi.top/contact.html">support form</a>. Processed within 30 days.
+      <p class="footer-text small">
+        TDStudio is an indie team creating unique and fun games. We focus on engaging gameplay, original art,
+        and ongoing improvements for players.
       </p>
-    </div>
-
-    <footer>
-      <p>© <span id="year"></span> Thanh Di's Gaming Studio — All rights reserved.</p>
+      <p class="footer-copy">
+        © <span id="year"></span> ThanhDi Studio – All rights reserved.
+      </p>
     </footer>
   </main>
 
+  <!-- Bottom nav (nếu cần giống các trang khác, giữ nguyên block này hoặc bỏ nếu page độc lập) -->
+  <nav
+    style="position:fixed;bottom:0;left:0;right:0;display:grid;grid-template-columns:repeat(5,1fr);background:linear-gradient(180deg,rgba(20,22,33,.95),rgba(20,22,33,.95));border-top:1px solid rgba(255,255,255,.08);padding:6px 6px calc(10px + env(safe-area-inset-bottom));z-index:50;">
+    <a href="https://www.facebook.com/ngocrongnthevmax" target="_blank" rel="noopener"
+      style="display:grid;place-items:center;gap:4px;text-decoration:none;color:#cbd5e1;padding:8px 0;border-radius:12px;font-size:12px;font-weight:500;">
+      <svg viewBox="0 0 256 256" style="width:22px;height:22px;fill:currentColor;" aria-hidden="true">
+        <path
+          d="M128 24a104 104 0 1 0 104 104A104.2 104.2 0 0 0 128 24Zm20 112h-12v48a8 8 0 0 1-16 0v-48h-8a8 8 0 0 1 0-16h8v-8c0-15.5 9.9-28 24-28h12a8 8 0 0 1 0 16h-12c-4.3 0-8 4.5-8 12v8h12a8 8 0 0 1 0 16Z" />
+      </svg>
+      <span>Fanpage</span>
+    </a>
+
+    <a href="./" id="btnGiftcode"
+      style="display:grid;place-items:center;gap:4px;text-decoration:none;color:#cbd5e1;padding:8px 0;border-radius:12px;font-size:12px;font-weight:500;">
+      <svg viewBox="0 0 256 256" style="width:22px;height:22px;fill:currentColor;" aria-hidden="true">
+        <path
+          d="M208 72h-21.1a36 36 0 1 0-58.9-40.6A36 36 0 1 0 69.1 72H48a16 16 0 0 0-16 16v32a8 8 0 0 0 8 8h8v88a16 16 0 0 0 16 16h128a16 16 0 0 0 16-16v-88h8a8 8 0 0 0 8-8V88a16 16 0 0 0-16-16Zm-56-24a20 20 0 1 1-20 20 20 20 0 0 1 20-20Zm-64 0a20 20 0 1 1-20 20 20 20 0 0 1 20-20ZM128 216H80v-88h48Zm48 0h-32v-88h32Zm32-104H48V88h160Z" />
+      </svg>
+      <span>Giftcode</span>
+    </a>
+
+    <a href="./"
+      style="display:grid;place-items:center;gap:4px;text-decoration:none;color:#fff;padding:8px 0;border-radius:12px;font-size:12px;font-weight:500;background:rgba(255,255,255,.05);border:1px solid rgba(255,255,255,.08);">
+      <svg viewBox="0 0 256 256" style="width:22px;height:22px;fill:currentColor;" aria-hidden="true">
+        <path
+          d="M218.8 106.3 136 34.7a15.9 15.9 0 0 0-21.1 0l-82.7 71.6A16 16 0 0 0 24 118.3V208a16 16 0 0 0 16 16h56a8 8 0 0 0 8-8v-56h48v56a8 8 0 0 0 8 8h56a16 16 0 0 0 16-16v-89.7a16 16 0 0 0-5.2-11.3Z" />
+      </svg>
+      <span>Home</span>
+    </a>
+
+    <a href="https://thanhdi.top/contact.html" target="_blank" rel="noopener"
+      style="display:grid;place-items:center;gap:4px;text-decoration:none;color:#cbd5e1;padding:8px 0;border-radius:12px;font-size:12px;font-weight:500;">
+      <svg viewBox="0 0 256 256" style="width:22px;height:22px;fill:currentColor;" aria-hidden="true">
+        <path
+          d="M221.6 158.5a54.3 54.3 0 0 0-43.5-21.4 55.8 55.8 0 0 0-17.8 2.9 8.4 8.4 0 0 0-5.1 10.1l10.1 35.2a4 4 0 0 1-1 3.9l-11.5 11.6a152.5 152.5 0 0 1-60.3-60.3l11.6-11.5a4 4 0 0 1 3.9-1l35.2 10.1a8.4 8.4 0 0 0 10.1-5.1A55.8 55.8 0 0 0 118.9 78a54.3 54.3 0 0 0-21.4-43.5 12.3 12.3 0 0 0-13.5-1.6l-28 12.7a16.2 16.2 0 0 0-8.9 11.6C37 88.5 42 139 84 181s92.5 47 123.8 37.1a16.2 16.2 0 0 0 11.6-8.9l12.7-28a12.3 12.3 0 0 0-1.5-13.7Z" />
+      </svg>
+      <span>Contact</span>
+    </a>
+
+    <a href="https://thanhdi.top/privacy.html"
+      style="display:grid;place-items:center;gap:4px;text-decoration:none;color:#cbd5e1;padding:8px 0;border-radius:12px;font-size:12px;font-weight:500;">
+      <svg viewBox="0 0 256 256" style="width:22px;height:22px;fill:currentColor;" aria-hidden="true">
+        <path
+          d="M208 40H48a8 8 0 0 0-8 8v56c0 88 77.2 119.4 85.1 122.5a7.7 7.7 0 0 0 5.8 0c7.9-3.1 85.1-34.5 85.1-122.5V48a8 8 0 0 0-8-8Zm-42.3 72.3-40 40a8.1 8.1 0 0 1-11.4 0l-20-20a8 8 0 0 1 11.4-11.4l14.3 14.4 34.3-34.4a8 8 0 0 1 11.4 11.4Z" />
+      </svg>
+      <span>Privacy</span>
+    </a>
+  </nav>
+
+  <!-- Auto-fill dates -->
   <script>
-    (function(){
-      const supported = ['vi','en'];
-      const urlLang = new URLSearchParams(location.search).get('lang');
-      const raw = urlLang || (navigator.languages && navigator.languages[0]) || navigator.language || 'en';
-      const lang = (raw||'en').toLowerCase().split('-')[0];
-      const active = supported.includes(lang) ? lang : 'en';
+    // Footer year
+    const y = document.getElementById('year');
+    if (y) y.textContent = new Date().getFullYear();
 
-      const i18n = {
-        vi: {
-          title: 'Quyền Riêng Tư Của Người Dùng – TDStudio Game',
-          heading: 'Quyền Riêng Tư Của Người Dùng',
-          intro_text: 'Bạn có thể yêu cầu <b>xóa tài khoản</b> hoặc <b>xóa dữ liệu cá nhân</b> liên quan đến ứng dụng TDStudio Game.',
-          method_title: 'Cách gửi yêu cầu',
-          method_text: 'Vui lòng liên hệ qua email: <a href="mailto:contact@thanhdi.top">contact@thanhdi.top</a><br>Hoặc dùng biểu mẫu hỗ trợ: <a href="https://thanhdi.top/contact.html">thanhdi.top/contact.html</a>',
-          sla_text: 'Chúng tôi sẽ xử lý yêu cầu trong vòng tối đa 30 ngày.',
-          short_title: 'Tiếng Việt (tóm tắt)',
-          short_text: 'Yêu cầu <b>xóa tài khoản</b> hoặc <b>xóa dữ liệu</b> → Email <a href="mailto:contact@thanhdi.top">contact@thanhdi.top</a> hoặc <a href="https://thanhdi.top/contact.html">biểu mẫu</a>. Xử lý trong 30 ngày.'
-        },
-        en: {
-          title: 'User Privacy Choices – TDStudio Game',
-          heading: 'User Privacy Choices',
-          intro_text: 'You can request <b>account deletion</b> or <b>personal data removal</b> related to the TDStudio Game app.',
-          method_title: 'How to submit a request',
-          method_text: 'Please contact us via email: <a href="mailto:contact@thanhdi.top">contact@thanhdi.top</a><br>Or use the support form: <a href="https://thanhdi.top/contact.html">thanhdi.top/contact.html</a>',
-          sla_text: 'We will process your request within 30 days.',
-          short_title: 'English (short)',
-          short_text: 'Request <b>account deletion</b> or <b>data removal</b> → Email <a href="mailto:contact@thanhdi.top">contact@thanhdi.top</a> or <a href="https://thanhdi.top/contact.html">support form</a>. Processed within 30 days.'
-        }
-      };
-
-      // Apply lang + title
-      document.documentElement.lang = active;
-      document.title = i18n[active].title;
-
-      // Apply text (plain vs html)
-      const dict = i18n[active];
-      document.querySelectorAll('[data-i18n]').forEach(el=>{
-        const k = el.getAttribute('data-i18n');
-        if (dict[k]) el.textContent = dict[k];
-      });
-      document.querySelectorAll('[data-i18n-html]').forEach(el=>{
-        const k = el.getAttribute('data-i18n-html');
-        if (dict[k]) el.innerHTML = dict[k];
-      });
-
-      // Show/hide short block
-      document.querySelectorAll('[data-show-if-lang]').forEach(el=>{
-        const only = el.getAttribute('data-show-if-lang');
-        el.style.display = only === active ? '' : 'none';
-      });
-
-      // Footer year
-      document.getElementById('year').textContent = new Date().getFullYear();
-    })();
+    // Today's date for the hero meta
+    const d = document.getElementById('choicesDate');
+    if (d) {
+      const today = new Date();
+      // Format DD/MM/YYYY to match privacy page
+      const formatted = String(today.getDate()).padStart(2, '0') + '/' +
+        String(today.getMonth() + 1).padStart(2, '0') + '/' +
+        today.getFullYear();
+      d.textContent = formatted;
+    }
   </script>
+
+  <script src="app.js"></script>
 </body>
+
 </html>
