--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <main class="page">
     <section class="hero">
-      <img src="assets/banner.png?v=12" alt="Sự kiện nổi bật" />
+      <!-- <img src="assets/banner.png?v=12" alt="Sự kiện nổi bật" /> -->
       <div class="hero__quick">
         <!-- Fanpage -->
         <a class="quick" href="https://www.facebook.com/ngocrongnthevmax" target="_blank">
