--- a/register.html
+++ b/register.html
@@ -30,128 +30,35 @@
     </header>
 
     <main class="page">
-      <section class="hero">
-        <img src="assets/banner.png?v=12" alt="Sự kiện nổi bật" />
-        <div class="hero__quick">
-          <!-- Fanpage -->
-          <a class="quick" href="https://www.facebook.com/ngocrongnthevmax"
+      <section class="register-section">
+        <div class="register-header">
+          <h2>ĐĂNG KÝ</h2>
+        </div>
+
+        <div class="register-list">
+          <a class="register-btn" href="https://nroclan.com/register"
             target="_blank">
-            <svg class="quick__icon" viewBox="0 0 24 24" fill="none"
-              stroke="currentColor" stroke-width="1.8"
-              stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-              <rect x="3" y="3" width="18" height="18" rx="4"></rect>
-              <path d="M14 8h-2.2A2.8 2.8 0 0 0 9 10.8V21"></path>
-              <path d="M10 13h3.8"></path>
-            </svg>
-            <span>Fanpage</span>
+            Đăng ký Server 1 (Clan)
           </a>
-
-          <!-- Giftcode -->
-          <a class="quick" href="#" id="btnGiftcode">
-            <svg class="quick__icon" viewBox="0 0 24 24" fill="none"
-              stroke="currentColor" stroke-width="1.8"
-              stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-              <rect x="3" y="8" width="18" height="12" rx="2"></rect>
-              <path d="M3 12h18M12 8v12"></path>
-              <path
-                d="M7.5 6a2.5 2.5 0 1 1 5 0c0 1.4-2.5 2-2.5 2s-2.5-.6-2.5-2zM11.5 6A2.5 2.5 0 1 1 16 6c0 1.4-2.5 2-2.5 2">
-              </path>
-            </svg>
-            <span>Giftcode</span>
+          <a class="register-btn" href="https://nro3q.com/register"
+            target="_blank">
+            Đăng ký Server 2 (3Q)
           </a>
-
-          <!-- Groups -->
-          <a class="quick"
-            href="https://www.facebook.com/groups/916049213653568">
-            <svg class="quick__icon" viewBox="0 0 24 24" fill="none"
-              stroke="currentColor" stroke-width="1.8"
-              stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-              <circle cx="9" cy="8" r="3"></circle>
-              <path d="M2 20a7 7 0 0 1 14 0"></path>
-              <circle cx="17" cy="9" r="2.5"></circle>
-              <path d="M22 20a6 6 0 0 0-7-5"></path>
-            </svg>
-            <span>Groups</span>
+          <a class="register-btn" href="https://nromun.com/register"
+            target="_blank">
+            Đăng ký Server 3 (Mun)
           </a>
-
-          <!-- Liên hệ -->
-          <a class="quick" href="https://thanhdi.top/contact.html">
-            <svg class="quick__icon" viewBox="0 0 24 24" fill="none"
-              stroke="currentColor" stroke-width="1.8"
-              stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-              <path
-                d="M22 16.9v2a2 2 0 0 1-2.2 2 19 19 0 0 1-8.3-3.1 19 19 0 0 1-6-6 19 19 0 0 1-3.1-8.3A2 2 0 0 1 4.4 1.2h2A2 2 0 0 1 8.3 2.7L9 5.9a2 2 0 0 1-.6 2L7.2 9.2a16 16 0 0 0 7.6 7.6l1.3-1.2a2 2 0 0 1 2-.5l3.2.7A2 2 0 0 1 22 16.9z" />
-            </svg>
-            <span>Contact</span>
+          <a class="register-btn" href="https://nrogping.com/register"
+            target="_blank">
+            Đăng ký Server 4 (Ping)
           </a>
-
-          <!-- Privacy -->
-          <a class="quick" href="privacy.html">
-            <svg class="quick__icon" viewBox="0 0 24 24" fill="none"
-              stroke="currentColor" stroke-width="1.8"
-              stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-              <path
-                d="M12 2l7 3v6c0 5-3.5 9.5-7 11-3.5-1.5-7-6-7-11V5l7-3z"></path>
-              <path d="M9.5 12l2 2 3.5-3.5"></path>
-            </svg>
-            <span>Privacy</span>
+          <a class="register-btn" href="https://nrokid.com/register"
+            target="_blank">
+            Đăng ký Server 5 (Kid)
           </a>
         </div>
       </section>
-      <section class="section">
-        <div class="section__head">
-          <h2 id="gamedexuat">GAME ĐỀ XUẤT</h2>
-          <a class="see-all" href="#" id="xemtatca">Xem tất cả <span
-              class="arrow">›</span></a>
-        </div>
 
-        <div class="cards">
-          <a class="card" href="https://nroclan.com" target="_blank">
-            <div class="card__thumb">
-              <img src="assets/1.png" alt="Ngọc Rồng Clan" />
-              <span class="tag hot">HOT</span>
-            </div>
-            <h3 class="card__title">Server 1 (Clan)</h3>
-            <div class="card__meta">GAME HOT</div>
-          </a>
-
-          <a class="card" href="https://nro3q.com" target="_blank">
-            <div class="card__thumb">
-              <img src="assets/2.png" alt="Ngọc Rồng 3Q" />
-              <span class="tag hot">HOT</span>
-            </div>
-            <h3 class="card__title">Server 2 (3Q)</h3>
-            <div class="card__meta">GAME HOT</div>
-          </a>
-
-          <a class="card" href="https://nromun.com" target="_blank">
-            <div class="card__thumb">
-              <img src="assets/3.png" alt="Ngọc Rồng Mun" />
-              <span class="tag hot">HOT</span>
-            </div>
-            <h3 class="card__title">Server 3 (Mun)</h3>
-            <div class="card__meta">GAME HOT</div>
-          </a>
-
-          <a class="card" href="https://nrogping.com" target="_blank">
-            <div class="card__thumb">
-              <img src="assets/4.png" alt="Ngọc Rồng Ping" />
-              <span class="tag hot">HOT</span>
-            </div>
-            <h3 class="card__title">Server 4 (Ping)</h3>
-            <div class="card__meta">GAME HOT</div>
-          </a>
-
-          <a class="card" href="https://nrokid.com" target="_blank">
-            <div class="card__thumb">
-              <img src="assets/5.png" alt="Ngọc Rồng Kid" />
-              <span class="tag hot">HOT</span>
-            </div>
-            <h3 class="card__title">Server 5 (Kid)</h3>
-            <div class="card__meta">GAME HOT</div>
-          </a>
-        </div>
-      </section>
       <!-- News / Posts -->
       <section class="section section-news">
         <div class="section__head">
