--- a/register.html
+++ b/register.html
@@ -48,7 +48,7 @@
             target="_blank">
             Đăng ký Server 3 (Mun)
           </a>
-          <a class="register-btn" href="https://nrogping.com/register"
+          <a class="register-btn" href="https://nroping.com/register"
             target="_blank">
             Đăng ký Server 4 (Ping)
           </a>
