--- a/download.html
+++ b/download.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>TDStudio – Home Page</title>
+        <title>TDStudio – Download</title>
         <link rel="stylesheet" href="styles.css" />
         <link rel="stylesheet"
             href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/css/ph.css">
