--- a/register.html
+++ b/register.html
@@ -4,14 +4,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>TDStudio – Home Page</title>
+    <title>TDStudio – Register</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet"
       href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/css/ph.css">
     <meta property="og:image"
-      content="https://nroclan.com/static/sonic/img/ok.png?v=112">
+      content="https://nroclan.com/static/sonic/img/graph_clan.png?v=330>">
     <meta property="og:image:secure_url"
-      content="https://nroclan.com/static/sonic/img/ok.png?v=112">
+      content="https://nroclan.com/static/sonic/img/graph_clan.png?v=330>">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:type" content="image/png">
