--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>TDStudio – Home Page</title>
+    <title>Trang chủ chính thức - TDStudio</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet"
       href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/css/ph.css">
