--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:type" content="image/png">
+    <meta name="zalo-platform-site-verification" content="NFRX0zp4P2a0mSmmzC1yDGZs_07aW2nTDJ8v" />
   </head>
 
   <body>
