--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <meta property="og:image:height" content="630">
     <meta property="og:image:type" content="image/png">
     <meta name="zalo-platform-site-verification" content="NFRX0zp4P2a0mSmmzC1yDGZs_07aW2nTDJ8v" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17645127478"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17645127478');
+</script>
   </head>
 
   <body>
