--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <span>Contact</span>
           </a>
 
-          <a class="quick" href="privacy.html">
+          <!-- <a class="quick" href="privacy.html">
             <svg class="quick__icon" viewBox="0 0 24 24" fill="none"
               stroke="currentColor" stroke-width="1.8" stroke-linecap="round"
               stroke-linejoin="round" aria-hidden="true">
@@ -117,7 +117,7 @@
                 d="M9.5 12l2 2 3.5-3.5"></path>
             </svg>
             <span>Privacy</span>
-          </a>
+          </a> -->
         </div>
       </section>
 
